--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@
             color: white;
         }
 
+        .server-performance-button {
+            background: linear-gradient(45deg, #ff6b6b, #ff3030);
+            color: white;
+        }
+
         .server-button:hover {
             transform: scale(1.05);
             box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
@@ -164,6 +169,45 @@
 
         .server-button i {
             margin-right: 10px;
+        }
+
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.9);
+        }
+
+        .modal-content {
+            background-color: rgba(22, 33, 62, 0.9);
+            margin: 10% auto;
+            padding: 20px;
+            border: 2px solid #ff3030;
+            width: 90%;
+            max-width: 600px;
+            border-radius: 15px;
+            color: white;
+            position: relative;
+        }
+
+        .close-btn {
+            color: #ff3030;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .server-iframe {
+            width: 100%;
+            height: 500px;
+            border: 2px solid #ff3030;
+            border-radius: 10px;
         }
 
         @media screen and (max-width: 600px) {
@@ -188,6 +232,9 @@
             }
             .tap-title {
                 font-size: 1rem;
+            }
+            .server-iframe {
+                height: 300px;
             }
         }
     </style>
@@ -223,6 +270,12 @@
                 <i class="fab fa-discord"></i> Join Discord
             </a>
         </div>
+
+        <div class="server-buttons">
+            <a href="#" id="serverPerformanceBtn" class="server-button server-performance-button">
+                <i class="fas fa-server"></i> Server Performance
+            </a>
+        </div>
         
         <div class="tap">
             <div class="tap-title">💎 จำหน่าย SERVER </div>
@@ -232,6 +285,17 @@
                 GPU: RTX 3050<br>
                 Price: 2000/1000 THB
             </div>
+        </div>
+    </div>
+
+    <div id="serverModal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn">&times;</span>
+            <iframe 
+                src="https://d4rk2e1iu.localto.net/" 
+                class="server-iframe" 
+                frameborder="0">
+            </iframe>
         </div>
     </div>
 
@@ -247,6 +311,26 @@
                 star.style.top = `${Math.random() * 100}%`;
                 star.style.animationDelay = `${Math.random() * 2}s`;
                 starsContainer.appendChild(star);
+            }
+        }
+
+        // Modal Functionality
+        const modal = document.getElementById('serverModal');
+        const btn = document.getElementById('serverPerformanceBtn');
+        const span = document.getElementsByClassName('close-btn')[0];
+
+        btn.onclick = function(event) {
+            event.preventDefault();
+            modal.style.display = "block";
+        }
+
+        span.onclick = function() {
+            modal.style.display = "none";
+        }
+
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
             }
         }
 
